Walk and write an image the way its own positions are named
An image is a series of pixels and its positions can be said two ways: a
count of them, or a column and a row. JEBOL had only the first. INDEX?/XY
took the refinement and ignored it, ATZ would not take a pair at all, and
FOREACH said an image was not something it knew how to walk.

Its fields could be read and not written, so `img/color: 1.2.3` quietly
did nothing at all. Writing them is not reading them turned round:

  RGB and COLOR leave the alpha where it was, because Fill_Line masks it
  off, while setting one pixel from a three-part tuple makes that pixel
  opaque -- Set_Pixel_Tuple writes 0xFF when the tuple is short.

  OPACITY is not another name for ALPHA but its opposite, 255 minus it,
  both reading and writing.

  GRAY and LUMINOSITY are two different sums and not two names for one,
  and LUMA is a third the encoder can reach and a path cannot.

  BGR can be read and not written. It is simply missing from the setter
  switch in the C, with nothing said about whether that was meant.

Every figure was read off a running 3.22.5 first, including the three
one-byte readings, which is how the wrong weights for luminosity were
caught.